fix: bottle background circle was stretching to the width of the screen

--- a/landing/responsive.css
+++ b/landing/responsive.css
@@ -90,7 +90,7 @@
 }
 
 .sortImg {
-  width: 100%;
+  max-width: 100%;
   padding: 10px 85px;
 }
 
